@@ -146,6 +146,7 @@ The --profile option allows to select the format:
 | | Win10 Mobile | | OK: Playback while transcoding |
 | IE | Win10 | MS IE <= 11 | OK: Playback while transcoding |
 | | Win7 | | Must decode first (1) |
+| CHROME | all | Google Chrome| Must decode first (2) |
 | SAFARI | Win | Apple Safari | Must decode first (2) |
 
 (1)
@@ -156,6 +157,7 @@ The --profile option allows to select the format:
 (2)
 * must start again when file was transcoded
 * Plays fine when file comes directly from buffer
+
 
 This all boils down to the fact than Firefox and Edge are the
 only browsers that support the necessary extensions to start
